--- a/index.html
+++ b/index.html
@@ -14,15 +14,10 @@
   <div id='difficulty'></div>
   <hr>
   <p id="msg">以下のボタンをクリックしてください</p>
-  <!-- <h3 id="msg">以下のボタンをクリックしてください</h3> -->
   <hr>
-  <!-- <form action="" method="post" id="form">
-      <p><input type="button" value="開始" id="start"></p>
-      <div id='answer'></div>
-  </form> -->
   
   <button id="start">開始</button>
-  <ul id="answer"></ul>
+  <ul id="answer" style="list-style: none;" ></ul>
 
   <script src="script.js"></script>
 </body>
